Name:               haskeroids
Version:            0.3
Synopsis:           Haskeroids
Description:        Haskell implementation of the classic game of asteroids
License:            MIT
License-file:       LICENSE
Author:             Sami Hangaslammi
Maintainer:         Sami Hangaslammi <shang@iki.fi>
Build-Type:         Simple
Cabal-Version:      >=1.2
Data-Files:         font.txt
Extra-Source-Files: font.txt

Executable haskeroids
    Main-is:            main.hs
    Build-Depends:      base >= 4, transformers >= 0.2.2.0,
                        mtl >= 2.0.1.0, GLUT >= 2.1.2.1,
                        containers >= 0.3.0.0, OpenGL >= 2.2.3.0,
                        random >= 1.0.0.2, time >= 1.1.4

